# pathscout

./: .gitignore  DATA_CONTRACT.md  LICENSE  README.md  pyproject.toml  setup.py
config/: background.sample.json  portfolio.json  profile.json  source_catalog.json  sources.json  watchlist.json
docs/: artifacts.md  marketplace.md  source_of_truth.md
pathscout/: __init__.py  artifacts.py  cli.py  config.py  db.py  digest.py  doctor.py  fetchers.py  runner.py  scoring.py  sources.py  watchlist.py  workflow.py
tests/: test_config_artifacts.py  test_runner.py  test_scoring.py  test_sources.py
