[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pathscout"
version = "0.2.0"
description = "Local-first startup role discovery."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "PathScout contributors"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Office/Business",
  "Topic :: Utilities"
]

[project.scripts]
pathscout = "pathscout.cli:main"

[tool.setuptools.packages.find]
include = ["pathscout*"]
